<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context="com.uca.apps.isi.taken.activities.NewComplaintActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_view_pager"
                android:background="@drawable/ic_default_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_new_complaint_padding_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:hint="@string/activity_new_complaint_title" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity_new_complaint_description" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/maps"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/padding_layout"
                android:layout_marginRight="@dimen/padding_layout"
                android:background="@color/placeHolderImage"
                android:drawableLeft="@drawable/ic_map"
                android:text="@string/activity_new_complaint_set_location"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="RtlHardcoded"/>

            <Button
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_layout"
                android:layout_marginRight="@dimen/padding_layout"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/activity_new_complaint_to_post"
                android:theme="@style/RaisedButton" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>